Add request possibiliies

--- a/templates/main.html
+++ b/templates/main.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 <h1>main and configuration setup</h1>
+
+<!-- GET REQUEST VIA HYPERLINK -->
+
+<h2>GET</h2>
+<a href="/request-counter">SEND GET REQUEST</a>
+
+
+<!-- POST REQUEST VIA HTML FORM -->
+
+<h2>POST</h2>
+<form action="/request-counter" method="POST">
+    <input type="submit" value="SEND POST REQUEST">
+</form>
+
 </body>
 </html>
