Create hyperlink to navigation for each template

--- a/templates/main.html
+++ b/templates/main.html
@@ -20,5 +20,8 @@
     <input type="submit" value="SEND POST REQUEST">
 </form>
 
+
+<!-- LINK TO STATS-->
+<a href="/statistics">GO TO STATISTICS</a>
 </body>
 </html>
