--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -15,6 +15,9 @@
   <tr>
     <td> POST: </td> <td> {{ data['POST'] }}</td>
   </tr>
+  <tr>
+    <td> DELETE: </td> <td> {{ data['DELETE'] }}</td>
+  </tr>
 </table>
 
 <hr>
